Added Product Pricing

--- a/index.html
+++ b/index.html
@@ -373,78 +373,78 @@
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_1847.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Truffles</h3>
-                        <span class="menu__preci">$0</span>
+                        <h3 class="menu__name">Truffles (12 ct.)</h3>
+                        <span class="menu__preci">$8</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_0412.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">Pinapple Flan</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$15</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4186.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">8 ct. strawberries W/ Dipped Oreo</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$20</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4438.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">12 ct. strwberry. W/ Choc. Heart</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$28</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4702.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">Cup of strawberries</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$16</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4142.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">12 Reg. Strawberry</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$22</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4089.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Dipped Ored</h3>
-                        <span class="menu__preci">$0</span>
+                        <h3 class="menu__name">Dipped Oreo (1ct.)</h3>
+                        <span class="menu__preci">$1</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/BF853948-A961-47E4-810E-60F24F2975F8.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Sugar Free Cookies</h3>
-                        <span class="menu__preci">$0</span>
+                        <h3 class="menu__name">Sugar Free Cookies (1 ct.)</h3>
+                        <span class="menu__preci">$1</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4082.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Chocolate Covered Oreos</h3>
-                        <span class="menu__preci">$0</span>
+                        <h3 class="menu__name">Chocolate Floured Oreos</h3>
+                        <span class="menu__preci">$1.50</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_4061.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Flan</h3>
-                        <span class="menu__preci">$0</span>
+                        <h3 class="menu__name">Rum Cake * Has Alcohol</h3>
+                        <span class="menu__preci">$30</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
                     <div class="menu__content">
                         <img src="assets/img/IMG_3385.jpg" alt="" class="menu__img">
                         <h3 class="menu__name">4 Stwberry & Choc. Heart</h3>
-                        <span class="menu__preci">$0</span>
+                        <span class="menu__preci">$15</span>
                         <a href="#contact" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
              
