--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
+        <!-- Trustpilot Verification -->
+        <meta name="trustpilot-one-time-domain-verification-id" content="f780c048-eab4-41df-bff8-6b3a5e164d14"/>
+
         <title>Anna Sweet Treats</title>
     </head>
     <body>
