--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <!-- Trustpilot Verification -->
-        <meta name="trustpilot-one-time-domain-verification-id" content="f780c048-eab4-41df-bff8-6b3a5e164d14"/>
+        <!--Verification -->
+        <meta name="verify-reviews" content="$2y$10$QgiuSGOpAEH9bkVGIww04usVS5uP.n0y5IBxBow/8Ls1Tcpe4NzYC">
 
         <title>Anna Sweet Treats</title>
     </head>
