--- a/index.html
+++ b/index.html
@@ -485,6 +485,15 @@
                     </div>
                 </div>
             </section>
+
+
+            <section class="section bd-container">
+                <div id="smart_reviews_widget_30d68217-8ff1-4f9a-8c49-e9ef8c84b2f6">
+                    Loading...
+                    <a id="smart_reviews_widget_link_30d68217-8ff1-4f9a-8c49-e9ef8c84b2f6" href="https://smart.reviews">Smart.Reviews</a>
+                </div>
+                <script src="https://smart.reviews/widget/render/30d68217-8ff1-4f9a-8c49-e9ef8c84b2f6"></script>
+            </section>
         </main>
 
         <!--========== FOOTER ==========-->
